--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SPAR2U Amount Calculator</title>
     <link rel="stylesheet"  type="text/css"  href="style.css">
     <script src="script.js" defer></script>
+	<link rel="icon" href="S2UImage.png" type="image/png">
 </head>
 <body>
     <div class="wrapper">
@@ -14,7 +15,6 @@
 	<label for="numberInput">Enter Order Amount:</label>
     <input type="number" id="numberInput" name="numberInput">
     <br>
-	<br>
 	<br>
     <label for="selectNumber">Out of Stock Items:</label>
     <select id="selectNumber" name="selectNumber">
@@ -27,6 +27,8 @@
 		<option value="6">6</option>
 		<option value="7">7</option>
 		<option value="8">8</option>
+		<option value="9">9</option>
+		<option value="10">10</option>
     </select>
     
     <div id="textFieldContainer"></div>
