--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
       <button id="clearButton">Clear</button>
     </div>
         
-     
-
+    <div id="popupContainer" class="popup">
+      <div class="popup-overlay"></div>
+      <div class="popup-content">
+          <span id="popupClose" class="popup-close">&times;</span>
+          <pre id="popupOutput"></pre>
+      </div>
+  </div>
+  
 
 </body>
 </html>
