--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="containerHW">
                     <div class="inputH">
-                        <label for="height">Order Number</label>
+                        <label for="height">Order (PART) Number</label>
                         <input type="number" id="height">
                     </div>
                     <div class="inputW">
