--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="content">
                 <div class="store">
                     <label for="storeName">Store Name</label>
-                    <input type="text" id="textInput" name="textInput" required autocomplete="on" oninput="predictiveSearch()">
+                    <input type="text" id="textInput" name="textInput" required oninput="predictiveSearch()">
                     <ul id="suggestionsDropdown"></ul>
                 </div>
               
